Fix the gap on the rigth while mobile version

--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -18,7 +18,6 @@
         position: relative;
         top: -20px;
         left: 30px;
-        width: 200px;
     }
     &__right-section {
         display: flex;
@@ -27,6 +26,7 @@
         width: 50px;
         right: -75vw;
         margin-left: 10px;
+        display: inline;
     }
     &__right-section > a:last-child {
         margin-left: 15px;
