--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -38,7 +38,7 @@
     }
     &__link-wider {
         position: absolute;
-        width: 100%;
+        width: fit-content;
         height: 25px;
     }
     a:link {
